--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - docker build -t ryhshu/react-test -f ./client/Dockerfile.dev ./client
 
 scripts:
-  - docker run ryhshu/docker-test npm test -- --coverage
+  - docker run ryhshu/react-test npm test -- --coverage
 
 after_success:
   - docker build -t ryhshu/multi-client ./client
