--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
 before_install:
   - docker build -t ryhshu/react-test -f ./client/Dockerfile.dev ./client
 
-scripts:
+script:
   - docker run ryhshu/react-test npm test -- --coverage
 
 after_success:
